--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@ Let's craft a digital masterpiece together.</p>
       <div class="nav blue">
         <div style="height: 10px"></div>
         <a href="./about.html">About</a>
-        <a href="/projects.html">Projects</a>
+        <a href="./projects.html">Projects</a>
         <a href="#">Contact</a>
         <div class="contacts">
           <img src="./assets/angel-wings-heart-svgrepo-com.svg" height="35px" />
